# tukituki

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  go.mod  go.sum
.github/workflows/: release.yml  rust.yml
.run/: docs.yaml
cmd/tukituki/: main.go  root.go
crates/tukituki/: Cargo.toml  build.rs
crates/tukituki-config/: Cargo.toml
crates/tukituki-config/src/: dotenv.rs  expand.rs  lib.rs
crates/tukituki-otel/: Cargo.toml  build.rs
crates/tukituki-otel/examples/: otel_emitter.rs
crates/tukituki-otel/proto/opentelemetry/proto/collector/logs/v1/: logs_service.proto
crates/tukituki-otel/proto/opentelemetry/proto/collector/metrics/v1/: metrics_service.proto
crates/tukituki-otel/proto/opentelemetry/proto/collector/trace/v1/: trace_service.proto
crates/tukituki-otel/proto/opentelemetry/proto/common/v1/: common.proto
crates/tukituki-otel/proto/opentelemetry/proto/logs/v1/: logs.proto
crates/tukituki-otel/proto/tukituki/otel/notify/v1/: notify.proto
crates/tukituki-otel/src/: collector.rs  lib.rs  notify.rs  severity.rs  value.rs
crates/tukituki-otel/tests/: collector_grpc.rs
crates/tukituki-process/: Cargo.toml
crates/tukituki-process/src/: lib.rs  manager.rs  otel_port.rs  shell.rs  tailer.rs
crates/tukituki-process/tests/: manager.rs  tailer.rs
crates/tukituki-state/: Cargo.toml
crates/tukituki-state/src/: lib.rs
crates/tukituki-tui/: Cargo.toml
crates/tukituki-tui/src/: app.rs  event.rs  handle.rs  input.rs  lib.rs  rows.rs  theme.rs  view.rs
crates/tukituki-tui/tests/: app.rs
crates/tukituki/src/: cli.rs  main.rs  platform.rs  rcfile.rs  runtime.rs
crates/tukituki/src/commands/: list.rs  logs.rs  mod.rs  otel_collector.rs  restart.rs  start.rs  status.rs  stop.rs  tui.rs  version.rs
crates/tukituki/tests/: alias.rs  golden_diff.rs  lifecycle.rs  list.rs  logs.rs  otel_live.rs  rcfile.rs  version.rs
crates/tukituki/tests/golden/: error_missing_run_dir.json  error_unknown_target.json  list.json  status_all.json  status_single.json
docs/: 404.html  en.search-data.json  en.search.js  en.search.min.9b5d3e9fc67ab4ea992026c85954736a0ac782b3a3c2f6829d00778ec91920c3.js  index.html  index.xml  sitemap.xml
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/docs/cli/: index.html  index.xml
docs/docs/cli/headless/: index.html
docs/docs/configuration/: index.html  index.xml
docs/docs/configuration/config-file/: index.html
docs/docs/configuration/run-targets/: index.html
docs/docs/getting-started/: index.html  index.xml
docs/docs/getting-started/installation/: index.html
docs/docs/getting-started/quick-start/: index.html
docs/docs/guides/: index.html  index.xml
docs/docs/guides/cleanup/: index.html
docs/docs/guides/opentelemetry/: index.html
docs/docs/guides/state-persistence/: index.html
docs/docs/tui/: index.html  index.xml
docs/docs/tui/keybindings/: index.html
docs/js/: main.js  main.min.a03bf8dbdb527a767062c81d3a2fc5a91c71d0ea086ac4eac110bc9cbb4f380b.js
docs/tags/: index.html  index.xml
documentation/: go.mod  hugo.toml
documentation/content/: _index.md
documentation/content/docs/: _index.md
documentation/content/docs/cli/: _index.md  headless.md
documentation/content/docs/configuration/: _index.md  config-file.md  run-targets.md
documentation/content/docs/getting-started/: _index.md  installation.md  quick-start.md
documentation/content/docs/guides/: _index.md  cleanup.md  opentelemetry.md  state-persistence.md
documentation/content/docs/tui/: _index.md  keybindings.md
examples/.run/: go-api.yaml  go-worker.yaml  python-web.yaml
examples/go-api/: go.mod  main.go
examples/go-worker/: go.mod  go.sum  main.go
examples/python-web/: main.py  pyproject.toml
homebrew/: render.sh  tukituki.rb.tmpl
internal/config/: config.go  config_test.go  dotenv.go  dotenv_test.go
internal/otel/: collector.go  collector_examples_test.go  collector_test.go  notify_hub.go  severity.go  severity_test.go
internal/otel/notify/: notify.pb.go  notify.proto  notify_grpc.pb.go
internal/otel/testdata/emitter/: main.go
internal/process/: manager.go  manager_test.go
internal/state/: state.go  state_test.go
internal/tui/: keymap.go  manager_interface.go  model.go  model_test.go  otel_notify.go  styles.go  tui.go
plans/: rust-port.md
