[package]
name = "tukituki-otel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenTelemetry log collector + notify-socket hub for tukituki"

[[example]]
name = "otel-emitter"
path = "examples/otel_emitter.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
# Vendors + builds the `protoc` compiler at first build, so users
# don't need to install protobuf-compiler on their system before
# `cargo install` / `cargo build`. Set TUKITUKI_USE_SYSTEM_PROTOC=1
# to skip the vendored build and fall back to PATH lookup (CI does
# this to save build time).
protobuf-src = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
