[package]
name = "tukituki-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "On-disk state and process-liveness tracking for tukituki"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }
